[package]
name = "ljx8000a"
version = "0.1.0"
edition = "2021"
default-run = "client_verify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }
chrono = "0.4.22"

## bin
dotenv = "0.15.0"
mylogger = { git = "https://github.com/ryo2357/rs-mylogger" }

[build-dependencies]
cc = "1.0"
